Update for github pages

--- a/data_cleaning_and_overview.html
+++ b/data_cleaning_and_overview.html
@@ -45,7 +45,17 @@ ul.task-list li input[type="checkbox"] {
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article toc-left">
 <div id="quarto-sidebar-toc-left" class="sidebar toc-left">
-  
+  <nav id="TOC" role="doc-toc" class="toc-active" data-toc-expanded="4">
+    <h2 id="toc-title">Table of contents</h2>
+   
+  <ul>
+  <li><a href="#yield-and-yield-components" id="toc-yield-and-yield-components" class="nav-link active" data-scroll-target="#yield-and-yield-components"><span class="header-section-number">1</span> Yield and Yield Components</a></li>
+  <li><a href="#phenology" id="toc-phenology" class="nav-link" data-scroll-target="#phenology"><span class="header-section-number">2</span> Phenology</a></li>
+  <li><a href="#pathogens" id="toc-pathogens" class="nav-link" data-scroll-target="#pathogens"><span class="header-section-number">3</span> Pathogens</a></li>
+  <li><a href="#yield-quality" id="toc-yield-quality" class="nav-link" data-scroll-target="#yield-quality"><span class="header-section-number">4</span> Yield Quality</a></li>
+  <li><a href="#management" id="toc-management" class="nav-link" data-scroll-target="#management"><span class="header-section-number">5</span> Management</a></li>
+  </ul>
+</nav>
 </div>
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
 </div>
@@ -84,65 +94,13 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<section id="yield-and-yield-components" class="level2" data-number="1">
+<h2 data-number="1" class="anchored" data-anchor-id="yield-and-yield-components"><span class="header-section-number">1</span> Yield and Yield Components</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
 <p><img src="data_cleaning_and_overview_files/figure-html/Seedyield-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/HI-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/BBCH59-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/BBCH87-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/Sowing_date-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/Emergence_date-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="data_cleaning_and_overview_files/figure-html/Plantheight-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -161,6 +119,15 @@ ul.task-list li input[type="checkbox"] {
 <div>
 <figure class="figure">
 <p><img src="data_cleaning_and_overview_files/figure-html/Biomass_bio-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/HI-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -192,6 +159,48 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/Plantheight-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id="phenology" class="level2" data-number="2">
+<h2 data-number="2" class="anchored" data-anchor-id="phenology"><span class="header-section-number">2</span> Phenology</h2>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/Emergence_date-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/BBCH59-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/BBCH87-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id="pathogens" class="level2" data-number="3">
+<h2 data-number="3" class="anchored" data-anchor-id="pathogens"><span class="header-section-number">3</span> Pathogens</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -246,6 +255,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
+</section>
+<section id="yield-quality" class="level2" data-number="4">
+<h2 data-number="4" class="anchored" data-anchor-id="yield-quality"><span class="header-section-number">4</span> Yield Quality</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -273,6 +285,19 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
+</section>
+<section id="management" class="level2" data-number="5">
+<h2 data-number="5" class="anchored" data-anchor-id="management"><span class="header-section-number">5</span> Management</h2>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="data_cleaning_and_overview_files/figure-html/Sowing_date-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
 
 </main>
 <!-- /main column -->
